# optix_prime_baking

./: .gitignore  Buffer.h  CMakeLists.txt  GLSLProgram.cpp  GLSLProgram.h  Preprocessor.h  README.md  bake_ao_optix_prime.cpp  bake_ao_optix_prime.h  bake_api.cpp  bake_api.h  bake_filter.cpp  bake_filter.h  bake_filter_least_squares.cpp  bake_filter_least_squares.h  bake_kernels.cu  bake_kernels.h  bake_sample.cpp  bake_sample.h  bake_sample_internal.h  bake_util.cpp  bake_util.h  bake_view.cpp  bake_view.h  main.cpp  random.h  tiny_obj_loader.h
assets/: README.md  README.txt  lucy_v134.bk3d
eigen/: README.txt
loaders/: bk3dBase.h  bk3dDefs.h  bk3dEx.h  cadscenefile.cpp  cadscenefile.h  load_bk3d_scene.cpp  load_csf_scene.cpp  load_obj_scene.cpp  load_scene.cpp  load_scene.h  load_scene_util.cpp  load_scene_util.h  tiny_obj_loader.h
